fix infinite scroll overflow

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -81,3 +81,5 @@ a {
   }
   & p { margin-bottom: 2rem; }
 }
+
+.infinite-scroll-component { overflow: visible !important; }
